Keep Java 8 compatibility